[tool.poetry]
name = "wow-anti-afk"
version = "0.1.0"
description = "An anti-afk script for WoW Classic in Mac."
authors = ["tssujt <contactxjw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyobjc = "^6.1"
pyautogui = "^0.9.48"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
